--- a/Front/Banco-de-Talentos/src/app/features/layout/layout.component.html
+++ b/Front/Banco-de-Talentos/src/app/features/layout/layout.component.html
@@ -2,6 +2,6 @@
   <shared-header></shared-header>
 </header>
 
-<div class="content">
+<div class="content xl:px-8">
   <router-outlet></router-outlet>
 </div>
