--- a/Front/Banco-de-Talentos/src/app/shared/components/control-panel/control-panel.component.scss
+++ b/Front/Banco-de-Talentos/src/app/shared/components/control-panel/control-panel.component.scss
@@ -26,3 +26,13 @@
     }
   }
 }
+
+.p-inputtext {
+  border-radius: 2rem;
+  width: 100%;
+}
+
+.p-input-icon-left,
+.p-input-icon-right {
+  width: 100%;
+}
