--- a/Front/Banco-de-Talentos/src/app/shared/components/prof-pers-crd/prof-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/prof-pers-crd/prof-pers-crd.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-wrap border-round m-1 sm:m-2 sm:mr-0">
+<div class="flex flex-wrap border-round m-1 sm:my-3 sm:mr-2 sm:ml-4">
   <div class="w-3 sm:w-2 p-1 flex align-items-center justify-content-center">
     <div
       class="relative w-4rem sm:w-6rem h-4rem sm:h-6rem border-circle bg-center bg-cover"
@@ -25,7 +25,7 @@
       <div
         class="border-round flex align-items-center sm:justify-content-start justify-content-between"
       >
-        <span class="font-semibold text-base text-800"
+        <span class="font-semibold text-sm sm:text-base text-800"
           >{{ customTalent?.name }} {{ customTalent?.surname }}
           {{ customTalent?.secondSurname }}
         </span>
@@ -37,18 +37,20 @@
         <div
           class="w-12 sm:w-5 border-round flex align-items-center justify-content-start"
         >
-          <span class="text-500 text-sm font-light">{{ workAs.name }}</span>
+          <span class="text-500 text-xs sm:text-sm font-light">{{
+            workAs.name
+          }}</span>
         </div>
         <div
           class="w-12 sm:w-7 border-round flex align-items-center justify-content-around profile-country-salary"
         >
-          <span class="text-500 text-sm font-light">
-            <i class="pi pi-map-marker text-sm text-800"></i>
+          <span class="text-500 text-xs sm:text-sm font-light">
+            <i class="pi pi-map-marker text-xs sm:text-sm text-800"></i>
             {{ countryCity.city | titlecase }},
             {{ countryCity.country | titlecase }}
           </span>
-          <span class="text-500 text-sm font-light">
-            <i class="pi pi-dollar text-sm text-800"></i>
+          <span class="text-500 text-xs sm:text-sm font-light">
+            <i class="pi pi-dollar text-xs sm:text-sm text-800"></i>
             {{ customTalent?.initialSalary }} - {{ customTalent?.finalSalary }}
           </span>
           <span
@@ -68,7 +70,7 @@
           [cancel]="false"
           [readonly]="true"
         ></p-rating>
-        <span class="mx-2 text-500 text-sm font-light"
+        <span class="mx-2 text-500 text-xs sm:text-sm font-light"
           >{{ totFeedbacks }} feedbacks
         </span>
       </div>
@@ -157,8 +159,16 @@
         (click)="photoUpload.click()"
       >
         <!--<i class="pi pi-cloud-upload px-2 pt-5 text-2xl text-bluegray-400"></i>-->
-        <i class="pi pi-cloud-upload px-2 pt-5 text-2xl text-bluegray-400" style="font-size: 1.5rem; color: #708090" *ngIf="!photoUploaded"></i>
-        <i class="pi pi-check px-2 pt-5 text-2xl text-bluegray-400" style="font-size: 1.5rem; color: #708090" *ngIf="photoUploaded"></i>
+        <i
+          class="pi pi-cloud-upload px-2 pt-5 text-2xl text-bluegray-400"
+          style="font-size: 1.5rem; color: #708090"
+          *ngIf="!photoUploaded"
+        ></i>
+        <i
+          class="pi pi-check px-2 pt-5 text-2xl text-bluegray-400"
+          style="font-size: 1.5rem; color: #708090"
+          *ngIf="photoUploaded"
+        ></i>
         <span
           class="px-3 pt-5 flex align-items-center justify-content-center font-bold border-round"
           style="color: #0b85c3"
