--- a/Front/Banco-de-Talentos/src/app/shared/components/skills-pers-crd/skills-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/skills-pers-crd/skills-pers-crd.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-wrap border-round m-1 sm:m-2 sm:mr-0">
+<div class="flex flex-wrap border-round m-1 sm:my-2 sm:mr-2 sm:ml-4">
   <div class="w-12 sm:w-7 p-1 flex flex-column">
     <div class="w-12 border-round-sm flex justify-content-between">
       <div class="flex align-items-center justify-content-center">
@@ -27,7 +27,7 @@
       </div>
     </div>
   </div>
-  <div class="w-12 sm:w-5 py-1 flex flex-column">
+  <div class="w-12 sm:w-5 p-1 flex flex-column">
     <div class="w-12 border-round-sm flex justify-content-between">
       <div class="flex align-items-center justify-content-center">
         <span class="font-semibold text-base text-600"
