feat: Implement user profile information

--- a/Front/Banco-de-Talentos/src/app/shared/components/header/header.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/header/header.component.html
@@ -23,10 +23,10 @@
       class="flex flex-order-0 sm:flex-order-1 flex-column hidden md:block px-3"
     >
       <span class="font-semibold text-base text-800 hidden md:block">
-        Claudia Vasquez
+        {{ name }}
       </span>
       <span class="text-500 text-sm font-light hidden md:block">
-        Reclutador
+        {{ recruiterOrVisitant | titlecase }}
       </span>
     </div>
   </div>
