--- a/Front/Banco-de-Talentos/src/app/features/layout/layout.component.html
+++ b/Front/Banco-de-Talentos/src/app/features/layout/layout.component.html
@@ -1,5 +1,9 @@
 <header class="navbar">
-  <shared-header></shared-header>
+  <shared-header
+    [name]="name"
+    [username]="username"
+    [isRecruiter]="isRecruiter"
+  ></shared-header>
 </header>
 
 <div class="content xl:px-8">
