feat: Split up views for recruiter and visitor

--- a/Front/Banco-de-Talentos/src/app/shared/components/certs-pers-crd/certs-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/certs-pers-crd/certs-pers-crd.component.html
@@ -51,6 +51,7 @@
     <button
       pButton
       class="p-button-outlined border-transparent h-8rem w-10 surface-50 hover:surface-200 flex flex-column"
+      *ngIf="isRecruiter"
       (click)="openAddFileDialog()"
     >
       <i class="pi pi-cloud-upload px-2 pt-3 text-2xl text-bluegray-400"></i>
