--- a/Front/Banco-de-Talentos/src/app/shared/components/control-panel/control-panel.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/control-panel/control-panel.component.html
@@ -1,17 +1,21 @@
 <div class="py-2 px-2 lg:px-4 xl:px-7 flex align-items-center shadow-none">
   <div class="flex flex-wrap border-round w-full">
     <div
-      class="w-12 sm:w-4 font-bold py-1 px-2 flex align-items-center justify-content-center sm:justify-content-start"
+      class="w-12 sm:w-4 py-1 px-2 flex align-items-center justify-content-center sm:justify-content-start"
     >
       <p-button
         label="Nuevo Talento"
         icon="pi pi-plus"
         styleClass="p-button-sm p-button-outlined p-button-info"
         (click)="onNewTalent()"
+        *ngIf="isRecruiter"
       ></p-button>
+      <span class="text-left text-sm text-500" *ngIf="!isRecruiter">{{
+        totalMsg
+      }}</span>
     </div>
     <div
-      class="w-12 sm:w-8 font-bold py-1 px-2 flex flex-wrap align-items-center sm:justify-content-evenly"
+      class="w-12 sm:w-8 py-1 px-2 flex flex-wrap align-items-center sm:justify-content-evenly"
     >
       <div
         class="w-6 sm:w-2 xl:w-2 flex align-items-center justify-content-start sm:justify-content-center p-1"
