--- a/Front/Banco-de-Talentos/src/app/shared/components/educ-pers-crd/educ-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/educ-pers-crd/educ-pers-crd.component.html
@@ -3,7 +3,10 @@
     <div class="flex align-items-center justify-content-center">
       <span class="font-semibold text-base text-600">Educación</span>
     </div>
-    <div class="flex align-items-center justify-content-center">
+    <div
+      class="flex align-items-center justify-content-center"
+      *ngIf="isRecruiter"
+    >
       <button
         pButton
         pRipple
@@ -40,6 +43,7 @@
     <div class="w-2 py-1 flex align-items-center justify-content-center">
       <div
         class="flex align-items-center justify-content-center h-4rem border-round"
+        *ngIf="isRecruiter"
       >
         <button
           pButton
