--- a/Front/Banco-de-Talentos/src/app/shared/components/prof-pers-crd/prof-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/prof-pers-crd/prof-pers-crd.component.html
@@ -2,7 +2,6 @@
   <div class="w-3 sm:w-2 p-1 flex align-items-center justify-content-center">
     <div
       class="relative w-4rem sm:w-6rem h-4rem sm:h-6rem border-circle bg-center bg-cover"
-      style="background-image: url('./assets/users/1.jpg')"
       [ngStyle]="{
         'background-image':
           'url(' + (customTalent?.profilePicture | base64ToImage) + ')'
@@ -10,6 +9,7 @@
     >
       <div
         class="absolute bottom-0 right-0 bg-white shadow-2 hover:shadow-5 flex align-items-center justify-content-center w-2rem h-2rem border-circle"
+        *ngIf="isRecruiter"
       >
         <span
           class="cursor-pointer text-500"
@@ -55,6 +55,7 @@
           </span>
           <span
             class="text-500 hover:text-700 text-sm font-light mx-1 cursor-pointer"
+            *ngIf="isRecruiter"
             (click)="openEditSalaryDialog()"
           >
             <i class="pi pi-pencil text-sm"></i>
@@ -116,6 +117,7 @@
         </a>
         <span
           class="cursor-pointer text-500 hover:text-700 mx-2"
+          *ngIf="isRecruiter"
           (click)="opEditSocMediaDlg()"
         >
           <i class="pi pi-pencil text-sm"></i>
