--- a/Front/Banco-de-Talentos/src/app/shared/components/summ-pers-crd/summ-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/summ-pers-crd/summ-pers-crd.component.html
@@ -4,6 +4,7 @@
       {{ description }}
       <span
         class="cursor-pointer mx-2 text-500 hover:text-700"
+        *ngIf="isRecruiter"
         (click)="openEditDescriptionDialog()"
       >
         <i class="pi pi-pencil text-sm"></i>
