feat: Improve dashboard view for visitors

--- a/Front/Banco-de-Talentos/src/app/shared/components/exp-pers-crd/exp-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/exp-pers-crd/exp-pers-crd.component.html
@@ -1,19 +1,22 @@
 <div class="flex flex-wrap border-round m-1 sm:my-2 sm:mr-2 sm:ml-4">
   <div class="w-12 p-1 flex align-items-center justify-content-between">
     <div class="flex align-items-center justify-content-center">
-      <span class="font-semibold text-base text-600">Experiencia</span>
+      <span class="font-semibold text-sm md:text-base text-600"
+        >Experiencia</span
+      >
     </div>
     <div
       class="flex align-items-center justify-content-center"
       *ngIf="isRecruiter"
     >
       <button
-        pButton
-        pRipple
-        icon="pi pi-plus"
-        class="p-button-rounded p-button-secondary p-button-text p-button-sm"
+        type="button"
+        class="mx-1 back-icon-btn"
+        *ngIf="isRecruiter"
         (click)="openNewWorkExperienceDialog()"
-      ></button>
+      >
+        <i class="pi pi-plus text-sm"></i>
+      </button>
     </div>
   </div>
   <div
@@ -29,7 +32,9 @@
     </div>
     <div class="w-8 p-1 flex align-items-center justify-content-center">
       <div class="flex flex-column gap-2 w-full">
-        <div class="flex align-items-center font-semibold text-base text-800">
+        <div
+          class="flex align-items-center font-semibold text-xs md:text-sm md:text-base text-800"
+        >
           {{ item.firm }}
         </div>
         <div class="flex align-items-center text-500 text-sm font-normal">
