--- a/Front/Banco-de-Talentos/src/app/shared/components/certs-pers-crd/certs-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/certs-pers-crd/certs-pers-crd.component.html
@@ -1,5 +1,8 @@
 <div class="flex flex-wrap border-round m-1 sm:my-2 sm:mr-2 sm:ml-4">
-  <div class="w-12 sm:w-8 p-1 flex align-items-center justify-content-center">
+  <div
+    class="w-12 p-1 flex align-items-center justify-content-center"
+    [ngClass]="{ 'sm:w-8': isRecruiter }"
+  >
     <p-carousel
       [value]="documents"
       [numVisible]="2"
@@ -47,17 +50,19 @@
       </ng-template>
     </p-carousel>
   </div>
-  <div class="w-12 sm:w-4 py-1 flex align-items-center justify-content-center">
+
+  <div
+    class="w-12 sm:w-4 py-1 flex align-items-center justify-content-center"
+    *ngIf="isRecruiter"
+  >
     <button
-      pButton
       class="p-button-outlined border-transparent h-8rem w-10 surface-50 hover:surface-200 flex flex-column"
-      *ngIf="isRecruiter"
       (click)="openAddFileDialog()"
     >
       <i class="pi pi-cloud-upload px-2 pt-3 text-2xl text-bluegray-400"></i>
       <span
-        class="px-3 pt-4 flex align-items-center justify-content-center font-semibold border-round"
         style="color: #0b85c3"
+        class="px-3 pt-4 flex align-items-center justify-content-center font-semibold border-round"
         >Sube un archivo</span
       >
     </button>
