--- a/Front/Banco-de-Talentos/src/app/shared/components/skills-pers-crd/skills-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/skills-pers-crd/skills-pers-crd.component.html
@@ -1,24 +1,24 @@
 <div class="flex flex-wrap border-round m-1 sm:my-2 sm:mr-2 sm:ml-4">
   <div class="w-12 sm:w-7 p-1 flex flex-column">
     <div class="w-12 border-round-sm flex justify-content-between">
-      <div class="flex align-items-center justify-content-center">
-        <span class="font-semibold text-base text-600"
+      <div class="py-1 flex align-items-center justify-content-center">
+        <span class="font-semibold text-sm md:text-base text-600"
           >Habilidades Técnicas</span
         >
       </div>
       <div class="flex align-items-center justify-content-center">
         <button
-          pButton
-          pRipple
-          icon="pi pi-plus"
-          class="p-button-rounded p-button-secondary p-button-text p-button-sm"
+          type="button"
+          class="mx-1 back-icon-btn"
           *ngIf="isRecruiter"
           (click)="openNewTechnicalSkillDialog()"
-        ></button>
+        >
+          <i class="pi pi-plus text-sm"></i>
+        </button>
       </div>
     </div>
 
-    <div class="border-round-sm">
+    <div class="border-round-sm mx-0 sm:mx-2 my-1">
       <div class="flex align-items-center flex-wrap gap-1">
         <p-chip
           *ngFor="let skill of inLineTechSkills"
@@ -30,24 +30,24 @@
   </div>
   <div class="w-12 sm:w-5 p-1 flex flex-column">
     <div class="w-12 border-round-sm flex justify-content-between">
-      <div class="flex align-items-center justify-content-center">
-        <span class="font-semibold text-base text-600"
+      <div class="py-1 flex align-items-center justify-content-center">
+        <span class="font-semibold text-sm md:text-base text-600"
           >Habilidades Blandas</span
         >
       </div>
       <div class="flex align-items-center justify-content-center">
         <button
-          pButton
-          pRipple
-          icon="pi pi-plus"
-          class="p-button-rounded p-button-secondary p-button-text p-button-sm"
+          type="button"
+          class="mx-1 back-icon-btn"
           *ngIf="isRecruiter"
           (click)="openNewSoftSkillDialog()"
-        ></button>
+        >
+          <i class="pi pi-plus text-sm"></i>
+        </button>
       </div>
     </div>
 
-    <div class="border-round-sm">
+    <div class="border-round-sm mx-0 sm:mx-2 my-1">
       <div class="flex align-items-center flex-wrap gap-1">
         <p-chip
           *ngFor="let skill of softSkills"
