--- a/Front/Banco-de-Talentos/src/assets/styles/_prime-ng.scss
+++ b/Front/Banco-de-Talentos/src/assets/styles/_prime-ng.scss
@@ -7,3 +7,21 @@ $md: 960px;
 $lg: 1280px;
 $xl: 1620px;
 @import "~primeflex/primeflex.scss";
+
+.back-icon-btn {
+  @include styleclass(
+    "flex align-items-center justify-content-center cursor-pointer border-none surface-section hover:bg-white-alpha-10 border-circle w-2rem h-2rem hover:shadow-2 transition-colors transition-duration-150 text-500 hover:text-700"
+  );
+}
+
+.back-icon-txt-btn {
+  @include styleclass(
+    "flex align-items-center justify-content-center cursor-pointer surface-section hover:bg-white-alpha-10 border-none border-round-md w-max h-2rem px-2 hover:shadow-2 transition-colors transition-duration-150 text-500 hover:text-700"
+  );
+}
+
+.back-icon-abs-btn {
+  @include styleclass(
+    "cursor-pointer bg-white hover:bg-gray-50 text-500 hover:text-800 flex align-items-center justify-content-center w-2rem h-2rem border-none border-circle shadow-2 hover:shadow-5 transition-colors transition-duration-150"
+  );
+}
