--- a/Front/Banco-de-Talentos/src/app/shared/components/certs-pers-crd/certs-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/certs-pers-crd/certs-pers-crd.component.html
@@ -5,10 +5,10 @@
   >
     <p-carousel
       [value]="documents"
-      [numVisible]="2"
-      [numScroll]="2"
       [circular]="true"
       [showIndicators]="false"
+      [numVisible]="numVisible"
+      [numScroll]="numScroll"
       [responsiveOptions]="responsiveOptions"
       class="w-full"
     >
@@ -56,6 +56,7 @@
     *ngIf="isRecruiter"
   >
     <button
+      pButton
       class="p-button-outlined border-transparent h-8rem w-10 surface-50 hover:surface-200 flex flex-column"
       (click)="openAddFileDialog()"
     >
