--- a/Front/Banco-de-Talentos/src/app/shared/components/educ-pers-crd/educ-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/educ-pers-crd/educ-pers-crd.component.html
@@ -28,7 +28,10 @@
         shape="circle"
       ></p-avatar>
     </div>
-    <div class="w-8 p-1 flex align-items-center justify-content-center">
+    <div
+      class="w-10 p-1 flex align-items-center justify-content-center"
+      [ngClass]="{ 'w-8': isRecruiter }"
+    >
       <div class="flex flex-column gap-2 w-full">
         <div
           class="flex align-items-center font-semibold text-sm md:text-base text-800"
@@ -45,10 +48,12 @@
         </div>
       </div>
     </div>
-    <div class="w-2 py-1 flex align-items-center justify-content-center">
+    <div
+      class="w-2 py-1 flex align-items-center justify-content-center"
+      *ngIf="isRecruiter"
+    >
       <div
         class="flex align-items-center justify-content-center h-4rem border-round"
-        *ngIf="isRecruiter"
       >
         <button
           pButton
