--- a/Front/Banco-de-Talentos/src/app/shared/components/exp-pers-crd/exp-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/exp-pers-crd/exp-pers-crd.component.html
@@ -30,14 +30,19 @@
         shape="circle"
       ></p-avatar>
     </div>
-    <div class="w-8 p-1 flex align-items-center justify-content-center">
+    <div
+      class="w-10 p-1 flex align-items-center justify-content-center"
+      [ngClass]="{ 'w-8': isRecruiter }"
+    >
       <div class="flex flex-column gap-2 w-full">
         <div
           class="flex align-items-center font-semibold text-xs md:text-sm md:text-base text-800"
         >
           {{ item.firm }}
         </div>
-        <div class="flex align-items-center text-500 text-sm font-normal">
+        <div
+          class="flex align-items-center text-500 text-xs md:text-sm font-normal"
+        >
           {{ item.jobTitle }}
           {{ item.intialDate | extractYear }} -
           {{ item.finalDate | extractYear }}
@@ -46,10 +51,12 @@
         </div>
       </div>
     </div>
-    <div class="w-2 py-1 flex align-items-center justify-content-center">
+    <div
+      class="w-2 py-1 flex align-items-center justify-content-center"
+      *ngIf="isRecruiter"
+    >
       <div
         class="flex align-items-center justify-content-center h-4rem border-round"
-        *ngIf="isRecruiter"
       >
         <button
           pButton
