--- a/Front/Banco-de-Talentos/src/app/shared/components/feedback-crd/feedback-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/feedback-crd/feedback-crd.component.html
@@ -5,11 +5,12 @@
     </div>
   </div>
   <div
-    class="w-12 flex align-items-center surface-hover p-1 mx-0 sm:mx-3 border-round-md"
+    class="w-12 flex align-items-center surface-hover p-1 mx-0 sm:mx-3 border-round-md my-1"
+    *ngFor="let item of feedbacks"
   >
     <div class="w-2 py-1 flex align-items-center justify-content-center">
       <p-avatar
-        image="./assets/users/1.jpg"
+        [image]="item.userFromPhoto | base64ToImage"
         size="large"
         shape="circle"
       ></p-avatar>
@@ -19,10 +20,10 @@
         <div
           class="flex align-items-center font-semibold text-sm md:text-base text-800"
         >
-          Cesar Ortiz
+          {{ item.userFromName }}
           <span class="mx-4">
             <p-rating
-              [(ngModel)]="rating"
+              [ngModel]="item.starCount"
               [stars]="5"
               [cancel]="false"
               [readonly]="true"
@@ -32,8 +33,7 @@
         <div
           class="flex align-items-center text-500 text-xs md:text-sm font-normal"
         >
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis
-          nostrum id ab.
+          {{ item.description }}
         </div>
       </div>
     </div>
