feat: Improve heart button to create favorites

--- a/Front/Banco-de-Talentos/src/app/shared/components/control-panel/control-panel.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/control-panel/control-panel.component.html
@@ -78,8 +78,9 @@
           <ng-template pTemplate>
             <p-listbox
               [options]="favorites"
-              optionLabel="name"
-              [(ngModel)]="selectedFavorite"
+              optionLabel="listName"
+              optionValue="idListUser"
+              [(ngModel)]="selectedIdFavorite"
               styleClass="border-none"
             ></p-listbox>
           </ng-template>
